fix spacing for main-view buttons

--- a/client/src/components/main-view/main-view.scss
+++ b/client/src/components/main-view/main-view.scss
@@ -21,10 +21,11 @@ $white: #fff;
 
 .main-view-title {
   color: $light-grey;
+  margin: 1rem auto;
 }
 
 .profile-button {
-  margin: 1rem auto;
+  margin-right: 1rem;
   background-color: $green;
   color: $white;
   border-color: $green;
